# mit-oases3.1-base

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  example-plot.sh  objdir.sh
Benchmarks/: CMakeLists.txt  README.INSTALL  doALL  do_30degLBeam  do_45degLBeam  do_ASAwedgeE  do_HorizForce  do_PntSrc  do_RSWT2a  do_RSWT2b  do_RSWT3a  do_RSWT3b  do_SACL_circle_F  do_SACL_step_F  do_SLeeHC  do_SLeed  do_SLeet  do_SLef  do_SLfe  do_TranspHF  do_TranspVF  do_VertForce  do_fnuw  do_gilbert  do_gilbertE  do_mikeExD  do_mikeExE  do_mikeSSD  do_norda3a  do_norda3ac2  do_torusE  do_torusF  log  perl.txt  plotALL  tt_mikeExD  tt_mikeExE
Benchmarks/docs/: doc.ps  main.aux  main.dvi  main.tex  main.toc  tests.tex
Benchmarks/input/: 30degLBeam.bot  30degLBeam.vss  45degLBeam.bot  45degLBeam.vss  ASAwedgeE.bot  ASAwedgeE.vss  HorizForce.vss  PntSrc.vss  RSWT2a.bot  RSWT2a.vss  RSWT2b.bot  RSWT2b.vss  RSWT3a.bot  RSWT3a.vss  RSWT3b.bot  RSWT3b.vss  SACL_circle_F.vss  SACL_step_F.vss  SLeeHC.vss  SLeed.vss  SLeet.vss  SLef.vss  SLfe.vss  TranspHF.vss  TranspVF.vss  VertForce.vss  fnuw.orig  fnuw.vss  gilbert.vss  gilbertE.vss  mikeExD.vss  mikeExE.bot  mikeExE.vss  mikeSSD.bot  norda3a.vss  norda3ac2.vss
Benchmarks/refs/COUPLE/: stairbck170.plt  stairbck50.plt
Benchmarks/src/: CMakeLists.txt  atofi.c  pltsplit.f
Benchmarks/tloss/: RSWT2a.mtv
Benchmarks/tloss/default_plps/: 30degLBeam.plp  45degLBeam.plp  ASAwedgeE.plp  HorizForce.plp  PntSrc.plp  RSWT2a.plp  RSWT2b.plp  RSWT3a.plp  RSWT3b.plp  SACL_circle_F.plp  SACL_step_F.plp  SLeeHC.plp  SLeed.plp  SLeet.plp  SLef.plp  SLfe.plp  TranspHF.plp  TranspVF.plp  VertForce.plp  fnuw.plp  gilbert.plp  gilbertE.plp  mikeExD.plp  mikeExE.plp  norda3a.plp  norda3ac2.plp  torusE.plp  torusF.plp
Benchmarks/tloss/stubs/: 30degLBeam.stub  45degLBeam.stub  ASAwedgeE.stub  HorizForce.stub  PntSrc.stub  RSWT2a.stub  RSWT2b.stub  RSWT3a.stub  RSWT3b.stub  SACL_circle_F.stub  SACL_step_F.stub  SLeeHC.stub  SLeed.stub  SLeet.stub  SLef.stub  SLfe.stub  TranspHF.stub  TranspVF.stub  VertForce.stub  fnuw.stub  gilbert.stub  gilbertE.stub  mikeExD.stub  mikeExE.stub  norda3a.stub  norda3ac2.stub  torusE.stub  torusF.stub
Plotmtv1.4.1/: Makefile  README.INSTALL  README.patch
contour/: README  add.f  axes.f  axlen.f  batch.f  bottom.f  chara.f  conseg.f  contur.com  cylspr.f  double.f  fileopen.f  filetype.f  gtxtty.f  iconsv.f  icontr.f  ipeold.f  main.f  main_axp_old.f  main_dcw.f  mainmtv.f  plotny.f  pregrd.f  probab.f  readpe.f  sample.f  shade.f  simpson.f  smoothc.f  star.f  statist.f  undef.f  user.f  window.f  writez.f  xrev.f  yaxlog.f  ylog.f  zgrid.f  zzlev.f
doc/: .gitignore  Makefile  README  mfp.tex  oases.tex  oases_appendix.tex  oases_bib.tex  oases_gen.tex  oases_graph.tex  oases_install.tex  oases_intro.tex  oases_new.tex  oasi.tex  oasn.tex  oasp.tex  oasp3d.tex  oasr.tex  oass.tex  oassp.tex  oast.tex  pp.par  pp.tex  pp.txt
matlab_util/: Ricker.m  abel_beamform.m  abel_k_w.m  beamsteer.m  bistar_time.m  cee.m  compare.m  contents.m  dba.m  dbp.m  est_cov.m  focus.m  focus_auv.m  form_covariance.m  ft_analysis.m  gabor.m  gaussian_product.m  gaussian_product_r.m  gaussian_reverb_new.m  gaussian_reverb_test.m  gaussian_xform.m  hamming.m  hankel_test.m  hanning.m  henrik_stacker.m  iMatlab.mexglx  image_array.m  image_echo.m  image_echo_dec.m  image_reverb.m  interp_kdl.m  kevcorr.m  kevfir1.m  kevsinc.m  kevsineint.m  kraken_loader.m  kraken_loader_hp.m  make_fwd_mov.m  make_group_disp.m  make_mov.m  (+51 more)
mfp_geo/: clratoc.m  crb_grd_mx.m  crb_grid.m  hsb.m  plt_crb_oas.m
mindis/: CARTD.FOR  POLDT.FOR  blnkd.f  ctldt.f  drivcalc.f  gistart.f  mindis.f  mindis2.f  mindis4.f  mindis6.f  mintolas.f  mintops.fr2  mintotek.f  msgdt.f  namdt.f  outidn.f  poldt.f  symdt.f
misc/: CMakeLists.txt  g77ulib.c  makefile.orig  tetime.f
paroases-src/: .gitignore  CMakeLists.txt  README.md  requirements.txt  tflipmem  wrapper.in
paroases-src/paroases/mulplt/: mulplt.py
paroases-src/paroases/oasp/: __init__.py  oasp.py  paroasp.py  sources.py
paroases-src/paroases/oasp/test_paroasp/: clean_tests.sh  test_paroasp.py
paroases-src/paroases/oasp/test_paroasp/test_simple/: debug.pbs
paroases-src/paroases/oast/: paroast.py  plot_oast.py
paroases-src/paroases/oast/test_paroast/: .gitignore  clean_tests.sh
paroases-src/paroases/utils/: progresscounter.py  wtimer.py
plot/: blanks.f  extleg.f  fipplot.f  hs_setc.f  initplt.f  modplt.f  multplt.f  numdec.f  out_tl.f  redata.f  rfform.f  scissor.f  seisl.f  vclip.f  xaxlog.f  yaxlin.f
pulse/: dgmtest.idat  log  tria.sou
pulsplot/: CMakeLists.txt  complo.f  compul.f  menucom.f  pp_asc.f  pulsuars.f  trfreadhead.f  trftomat.f  x.f
scat/: fort.46
src/: CMakeLists.txt  addcov.f  apmath21.f  calsvc.f  cbgemr.f  coher.f  combes.f  combuf.f  comdat.f  comnp.f  comnrd.f  compar.f  comti.f  comvol.f  corrfn.f  crtxsm.f  envgen.f  intgr3.f  matsubs_.c  munkgen.f  munkran.f  munksed.f  noiprm.f  nrmcov.f  oasbun25.f  oasfun22.f  oasgun21.f  oashun21.f  oasi.c  oasjun21.f  oasn.c  oasnun22.f  oasp.c  oassp.c  oassun26.f  oasvun29.f  oasvun31.f  recarr.f  srccoo.f  trford.f  (+7 more)
src-3d/: comti.f  makefile.stellar  makefile.sun  oascun31.f  oaseun37.f  unoasp39.f
src-mfp/: CMakeLists.txt  unoasi22.f  unoasi23.f
src/2d/: CMakeLists.txt  invbuf.f  mfp.c  oaseun31.f  oasr.c  oass.c  oast.c  scndis.f  sollay.f  unoasi22.f  unoasi23.f  unoasn22.f  unoasr21.f  unoass21.f  unoast31.f
src/3d/: CMakeLists.txt  comnla.f  comnp.f  comnrd.f  compar.f  oasaun37.f  oasbun21.f  oashun11.f  oasp3.c  oast3.c  scnfor.f  scnmom.f  unoasp39.f  unoast35.f
src/core/: cminv.f  comfip.f  comnla.f  itran.f  oasdun21.f  pesbuf.f  unoasn22.f  unoasp22.f  unoass21.f  unoassp29.f  unoassp31.f
src/liboas/: oaseun32.f  oaskun21.f
src/mfp/: CMakeLists.txt  oasoun21.f  unoasm21.f
src/pulsplot/: CMakeLists.txt  combes.f  comgldwr.h  comnla.f  comnrd.f  compar.f  comti.f  gldmake.f  pp.f  pp.par  pulssubs.f  read3d.f  readnew.f  shmenu.f  split.f  sterm.f  tracefile.f  trftoascii.f  trftovss.f
volume/: hla.m  (+5 more)
(+125 files in other folders)
